--- a/WhiteCat/WhiteCat.vcxproj
+++ b/WhiteCat/WhiteCat.vcxproj
@@ -87,7 +87,7 @@
       <AdditionalIncludeDirectories>C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glfw-3.2.1.bin.WIN64\include;C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glew-2.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glfw-3.2.1.bin.WIN64\lib-vc2015;C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -118,17 +118,21 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glfw-3.2.1.bin.WIN64\lib-vc2015;C:\Users\cesar\Desktop\C++\Repositories\WhiteCat\WhiteCat\libs\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Math\Evaluator.cpp" />
+    <ClCompile Include="src\Math\Solver.cpp" />
     <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\Math\Evaluator.h" />
+    <ClInclude Include="src\Math\Solver.h" />
     <ClInclude Include="src\utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
